--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,22 @@
 body {
     font-family: 'sans';
-    background-image: url(../images/tiger.jpg);
+    background-image: url("../images/tiger.jpg");
     background-repeat: repeat;
     color: #FFD700;
     background-size: 100%;
 }
 .nav { border: 1px solid orange;
 background-color: orange;
-color:blue;
+color:yellow;
 padding: 1px 1px;
 margin-left: 1px;
 text-decoration: none;
 }
 p {
-    font-size:43px;
+    font-size:72px;
     font-weight: bold;
     font-family: fantasy;
-    color:blue;
+    color:black;
 }
 
 .btn1 {
@@ -58,18 +58,18 @@ p {
   transition-duration: 8s;
 }
 .btn1:hover {
-    background-color: red;
-    transition-duration: 8s;
+    background-color: blue;
+    transition-duration: 1.5s;
 }
 
 .btn2:hover {
-    background-color: red;
-    transition-duration: 8s;
+    background-color: blue;
+    transition-duration: 1.5s;
 }
 
 .btn3:hover {
-  background-color: red;
-  transition-duration: 8s;
+  background-color: blue;
+  transition-duration: 1.5s;
   
 }
 
@@ -83,8 +83,26 @@ p {
 }
 .about-us-content {
     background-color: rgba(255, 255, 255, .7);
+    font-size: 50px;
     }
 .common-content {
     background-color: rgba(255, 255, 255, .7);
+    font-size: 50px;
 }
-
+.index-content {
+    color: black;
+    background-color: rgba(255, 255, 255, .7);
+}
+.static {
+    position:absolute;
+    border:3px solid yellow;
+}
+.text{
+     position:relative;
+     float:left 40px; 
+}
+.list {
+    background-color: rgba(255, 255, 255, .7);
+    color: black;
+    font-size: 40px;
+}
