--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,6 +52,7 @@ p {
   cursor:pointer;
   border-radius: 10px;
   transition-duration: 8s;
+  margin-right: 130px;
 }
 
 .btn5 {
@@ -65,6 +66,7 @@ p {
   cursor:pointer;
   border-radius: 10px;
   transition-duration: 8s;
+  margin-right:150px;
 }
 .btn6 {
   background-color:gold;
@@ -77,6 +79,7 @@ p {
   cursor:pointer;
   border-radius: 10px;
   transition-duration: 8s;
+  margin-right:150px;
 }
 .btn7 {
   background-color:gold;
@@ -89,6 +92,7 @@ p {
   cursor:pointer;
   border-radius: 10px;
   transition-duration: 8s;
+  margin-right:20px;
 }
 .common {
     font-family: 'sans';
@@ -134,7 +138,7 @@ p {
 }
 .navbar a {
     text-decoration:none;
-    color:gray;
+    color:blue;
 }
 .active {
     font-weight: bolder;
@@ -142,8 +146,16 @@ p {
 .navbar a:hover {
     background-color: black;
 }
-.navbar  {
-    color: #A9A9A9;
+.image{
+    float:bottom;
+    margin-left:10px;
+}
+.link{
+    margin-left:20px;
+}
+
+.common {
+    video:
 }
     
 
